--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "npm": ">=8.0.0"
   },
   "scripts": {
-    "readme:lint": "markdownlint *.md -f",
     "readme:parameters": "readme-generator -v charts/reposilite/values.yaml -r README.md"
   },
   "devDependencies": {
-    "@bitnami/readme-generator-for-helm": "^2.5.0",
-    "markdownlint-cli": "^0.45.0"
+    "@bitnami/readme-generator-for-helm": "^2.5.0"
   }
 }
