--- a/charts/reposilite/Chart.yaml
+++ b/charts/reposilite/Chart.yaml
@@ -1,7 +1,8 @@
 apiVersion: v2
 appVersion: "3.5.25"
-description: "Lightweight and easy-to-use repository management software
-  dedicated for the Maven based artifacts in the JVM ecosystem"
+description: |
+  Lightweight and easy-to-use repository management software
+  dedicated for the Maven based artifacts in the JVM ecosystem
 icon: https://raw.githubusercontent.com/dzikoysk/reposilite/main/reposilite-site/public/images/favicon.png
 keywords:
   - reposilite
@@ -23,4 +24,4 @@ sources:
   - https://github.com/dzikoysk/reposilite
   - https://github.com/reposilite-playground/reposilite-helm
 type: application
-version: "1.3.23"
+version: "2.0.0"
